# honote

./: README.md
app/: Cargo.toml
app/src/: main.rs  models.rs
app/src/dao/sqlite/: beekeeper.rs  honey_dao.rs
app/src/models/: honey.rs
app/src/schemas/: sqlite.rs
db/: 2024-04-25-create-honey.sql  honey.db  honey.db-old
migrations/2024-04-27-032731_crate_honey/: down.sql  up.sql
