[package]
name = "app"
version = "0.1.0"
authors = ["daiki"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web
actix-web = "4.5.1"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"

#diesel
diesel = { version = "2.1.0", features = ["postgres"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"]}
dotenvy = "0.15"

